(hopefully) last color contrast fix!

--- a/RosalitaPortfolio/css/style.css
+++ b/RosalitaPortfolio/css/style.css
@@ -94,7 +94,7 @@ header h2{
 	font-weight: bold;
 	text-decoration-line: underline;
 	text-decoration-style: wavy;
-	color: #4F292D;
+	color: #432326;
 }
 
 /*Content*/
